// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Theme Package: Snapshot Tests brutalist theme snapshot 1`] = `
{
  "animation": {
    "durationFast": 100,
    "durationNormal": 200,
    "durationSlow": 300,
    "easingBounce": "cubic-bezier(0.68, -0.55, 0.265, 1.55)",
    "easingDefault": "cubic-bezier(0.68, -0.55, 0.265, 1.55)",
    "easingSmooth": "cubic-bezier(0.34, 1.56, 0.64, 1)",
  },
  "colors": {
    "accent1": "#00D9FF",
    "accent2": "#FF3BD9",
    "accent3": "#00FF85",
    "background": "#FFFEF2",
    "backgroundSecondary": "#FFF9E3",
    "black": "#000000",
    "border": "#1A1A1A",
    "borderLight": "#4A4A4A",
    "error": "#FF3366",
    "errorLight": "#FFE6ED",
    "primary": "#FF6B35",
    "primaryDark": "#E85A2A",
    "primaryLight": "#FF8F66",
    "secondary": "#FFD23F",
    "secondaryLight": "#FFE380",
    "success": "#00FF85",
    "successLight": "#CCFFE5",
    "surface": "#FFFFFF",
    "surfaceSecondary": "#FFFDFA",
    "text": "#1A1A1A",
    "textSecondary": "#4A4A4A",
    "textTertiary": "#7A7A7A",
    "warning": "#FFD23F",
    "white": "#FFFFFF",
  },
  "isPremium": false,
  "name": "Brutalist",
  "radius": {
    "radius2XL": 20,
    "radiusFull": 9999,
    "radiusLG": 12,
    "radiusMD": 8,
    "radiusSM": 4,
    "radiusXL": 16,
    "radiusXS": 0,
  },
  "shadows": {
    "shadowLG": {
      "elevation": 0,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 6,
        "width": 6,
      },
      "shadowOpacity": 1,
      "shadowRadius": 0,
    },
    "shadowMD": {
      "elevation": 0,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 4,
      },
      "shadowOpacity": 1,
      "shadowRadius": 0,
    },
    "shadowSM": {
      "elevation": 0,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 2,
      },
      "shadowOpacity": 1,
      "shadowRadius": 0,
    },
    "shadowXL": {
      "elevation": 0,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 8,
        "width": 8,
      },
      "shadowOpacity": 1,
      "shadowRadius": 0,
    },
  },
  "spacing": {
    "space1": 4,
    "space12": 48,
    "space16": 64,
    "space2": 8,
    "space20": 80,
    "space24": 96,
    "space3": 12,
    "space4": 16,
    "space6": 24,
    "space8": 32,
  },
  "typography": {
    "fontFamilyBody": "PlusJakartaSans_400Regular",
    "fontFamilyBodyBold": "PlusJakartaSans_700Bold",
    "fontFamilyBodyMedium": "PlusJakartaSans_500Medium",
    "fontFamilyBodySemibold": "PlusJakartaSans_600SemiBold",
    "fontFamilyDisplay": "Outfit_400Regular",
    "fontFamilyDisplayBold": "Outfit_700Bold",
    "fontFamilyDisplayMedium": "Outfit_500Medium",
    "fontFamilyDisplaySemibold": "Outfit_600SemiBold",
    "fontFamilyMono": "Courier",
    "fontSize2XL": 28,
    "fontSize3XL": 48,
    "fontSizeLG": 18,
    "fontSizeMD": 16,
    "fontSizeSM": 14,
    "fontSizeXL": 20,
    "fontSizeXS": 13,
    "fontWeightBold": "700",
    "fontWeightLight": "300",
    "fontWeightMedium": "500",
    "fontWeightRegular": "400",
    "fontWeightSemibold": "600",
    "lineHeightNormal": 1.4,
    "lineHeightRelaxed": 1.6,
    "lineHeightTight": 1.1,
  },
}
`;

exports[`Theme Package: Snapshot Tests dark theme snapshot 1`] = `
{
  "animation": {
    "durationFast": 150,
    "durationNormal": 250,
    "durationSlow": 400,
    "easingBounce": "cubic-bezier(0.68, -0.55, 0.265, 1.55)",
    "easingDefault": "ease-in-out",
    "easingSmooth": "cubic-bezier(0.4, 0, 0.2, 1)",
  },
  "colors": {
    "accent1": "#fb923c",
    "accent2": "#f472b6",
    "accent3": "#4ade80",
    "background": "#0f0f0f",
    "backgroundSecondary": "#1a1a1a",
    "black": "#000000",
    "border": "#404040",
    "borderLight": "#333333",
    "error": "#f87171",
    "errorLight": "#7f1d1d",
    "primary": "#818cf8",
    "primaryDark": "#6366f1",
    "primaryLight": "#a5b4fc",
    "secondary": "#a78bfa",
    "secondaryLight": "#c4b5fd",
    "success": "#4ade80",
    "successLight": "#166534",
    "surface": "#262626",
    "surfaceSecondary": "#2a2a2a",
    "text": "#f5f5f5",
    "textSecondary": "#a3a3a3",
    "textTertiary": "#737373",
    "warning": "#fb923c",
    "white": "#ffffff",
  },
  "isPremium": false,
  "name": "Dark Mode",
  "radius": {
    "radius2XL": 32,
    "radiusFull": 9999,
    "radiusLG": 16,
    "radiusMD": 12,
    "radiusSM": 8,
    "radiusXL": 24,
    "radiusXS": 4,
  },
  "shadows": {
    "shadowLG": {
      "elevation": 4,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 8,
    },
    "shadowMD": {
      "elevation": 2,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 4,
    },
    "shadowSM": {
      "elevation": 1,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.05,
      "shadowRadius": 2,
    },
    "shadowXL": {
      "elevation": 8,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 8,
        "width": 0,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 16,
    },
  },
  "spacing": {
    "space1": 4,
    "space12": 48,
    "space16": 64,
    "space2": 8,
    "space20": 80,
    "space24": 96,
    "space3": 12,
    "space4": 16,
    "space6": 24,
    "space8": 32,
  },
  "typography": {
    "fontFamilyBody": "PlusJakartaSans_400Regular",
    "fontFamilyBodyBold": "PlusJakartaSans_700Bold",
    "fontFamilyBodyMedium": "PlusJakartaSans_500Medium",
    "fontFamilyBodySemibold": "PlusJakartaSans_600SemiBold",
    "fontFamilyDisplay": "Outfit_400Regular",
    "fontFamilyDisplayBold": "Outfit_700Bold",
    "fontFamilyDisplayMedium": "Outfit_500Medium",
    "fontFamilyDisplaySemibold": "Outfit_600SemiBold",
    "fontFamilyMono": "Courier",
    "fontSize2XL": 28,
    "fontSize3XL": 48,
    "fontSizeLG": 18,
    "fontSizeMD": 16,
    "fontSizeSM": 14,
    "fontSizeXL": 20,
    "fontSizeXS": 13,
    "fontWeightBold": "700",
    "fontWeightLight": "300",
    "fontWeightMedium": "500",
    "fontWeightRegular": "400",
    "fontWeightSemibold": "600",
    "lineHeightNormal": 1.4,
    "lineHeightRelaxed": 1.6,
    "lineHeightTight": 1.1,
  },
}
`;

exports[`Theme Package: Snapshot Tests default theme snapshot 1`] = `
{
  "animation": {
    "durationFast": 150,
    "durationNormal": 250,
    "durationSlow": 400,
    "easingBounce": "cubic-bezier(0.68, -0.55, 0.265, 1.55)",
    "easingDefault": "ease-in-out",
    "easingSmooth": "cubic-bezier(0.4, 0, 0.2, 1)",
  },
  "colors": {
    "accent1": "#f97316",
    "accent2": "#ec4899",
    "accent3": "#22c55e",
    "background": "#fafafa",
    "backgroundSecondary": "#f5f5f5",
    "black": "#000000",
    "border": "#e5e5e5",
    "borderLight": "#f0f0f0",
    "error": "#ef4444",
    "errorLight": "#fee2e2",
    "primary": "#6366f1",
    "primaryDark": "#4f46e5",
    "primaryLight": "#818cf8",
    "secondary": "#8b5cf6",
    "secondaryLight": "#a78bfa",
    "success": "#22c55e",
    "successLight": "#dcfce7",
    "surface": "#ffffff",
    "surfaceSecondary": "#f9fafb",
    "text": "#1a1a1a",
    "textSecondary": "#666666",
    "textTertiary": "#999999",
    "warning": "#f97316",
    "white": "#ffffff",
  },
  "isPremium": false,
  "name": "Default",
  "radius": {
    "radius2XL": 32,
    "radiusFull": 9999,
    "radiusLG": 16,
    "radiusMD": 12,
    "radiusSM": 8,
    "radiusXL": 24,
    "radiusXS": 4,
  },
  "shadows": {
    "shadowLG": {
      "elevation": 4,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 8,
    },
    "shadowMD": {
      "elevation": 2,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 4,
    },
    "shadowSM": {
      "elevation": 1,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.05,
      "shadowRadius": 2,
    },
    "shadowXL": {
      "elevation": 8,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 8,
        "width": 0,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 16,
    },
  },
  "spacing": {
    "space1": 4,
    "space12": 48,
    "space16": 64,
    "space2": 8,
    "space20": 80,
    "space24": 96,
    "space3": 12,
    "space4": 16,
    "space6": 24,
    "space8": 32,
  },
  "typography": {
    "fontFamilyBody": "PlusJakartaSans_400Regular",
    "fontFamilyBodyBold": "PlusJakartaSans_700Bold",
    "fontFamilyBodyMedium": "PlusJakartaSans_500Medium",
    "fontFamilyBodySemibold": "PlusJakartaSans_600SemiBold",
    "fontFamilyDisplay": "Outfit_400Regular",
    "fontFamilyDisplayBold": "Outfit_700Bold",
    "fontFamilyDisplayMedium": "Outfit_500Medium",
    "fontFamilyDisplaySemibold": "Outfit_600SemiBold",
    "fontFamilyMono": "Courier",
    "fontSize2XL": 28,
    "fontSize3XL": 48,
    "fontSizeLG": 18,
    "fontSizeMD": 16,
    "fontSizeSM": 14,
    "fontSizeXL": 20,
    "fontSizeXS": 13,
    "fontWeightBold": "700",
    "fontWeightLight": "300",
    "fontWeightMedium": "500",
    "fontWeightRegular": "400",
    "fontWeightSemibold": "600",
    "lineHeightNormal": 1.4,
    "lineHeightRelaxed": 1.6,
    "lineHeightTight": 1.1,
  },
}
`;

exports[`Theme Package: Snapshot Tests retro-pacman theme snapshot 1`] = `
{
  "animation": {
    "durationFast": 150,
    "durationNormal": 250,
    "durationSlow": 400,
    "easingBounce": "cubic-bezier(0.68, -0.55, 0.265, 1.55)",
    "easingDefault": "ease-in-out",
    "easingSmooth": "cubic-bezier(0.4, 0, 0.2, 1)",
  },
  "colors": {
    "accent1": "#FF0000",
    "accent2": "#FFB8FF",
    "accent3": "#FFB852",
    "background": "#000000",
    "backgroundSecondary": "#121212",
    "black": "#000000",
    "border": "#0000FF",
    "borderLight": "#0000AA",
    "error": "#FF0000",
    "errorLight": "#330000",
    "primary": "#FFFF00",
    "primaryDark": "#D4D400",
    "primaryLight": "#FFFF33",
    "secondary": "#0000FF",
    "secondaryLight": "#3333FF",
    "success": "#00FF00",
    "successLight": "#003300",
    "surface": "#000000",
    "surfaceSecondary": "#1A1A1A",
    "text": "#FFFF00",
    "textSecondary": "#CCCCCC",
    "textTertiary": "#888888",
    "warning": "#FFB852",
    "white": "#FFFFFF",
  },
  "isPremium": true,
  "name": "Retro Pacman",
  "radius": {
    "radius2XL": 0,
    "radiusFull": 9999,
    "radiusLG": 0,
    "radiusMD": 0,
    "radiusSM": 0,
    "radiusXL": 0,
    "radiusXS": 0,
  },
  "shadows": {
    "shadowLG": {
      "elevation": 4,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 8,
    },
    "shadowMD": {
      "elevation": 2,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 4,
    },
    "shadowSM": {
      "elevation": 1,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.05,
      "shadowRadius": 2,
    },
    "shadowXL": {
      "elevation": 8,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 8,
        "width": 0,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 16,
    },
  },
  "spacing": {
    "space1": 4,
    "space12": 48,
    "space16": 64,
    "space2": 8,
    "space20": 80,
    "space24": 96,
    "space3": 12,
    "space4": 16,
    "space6": 24,
    "space8": 32,
  },
  "typography": {
    "fontFamilyBody": "Courier",
    "fontFamilyBodyBold": "PlusJakartaSans_700Bold",
    "fontFamilyBodyMedium": "PlusJakartaSans_500Medium",
    "fontFamilyBodySemibold": "PlusJakartaSans_600SemiBold",
    "fontFamilyDisplay": "Courier",
    "fontFamilyDisplayBold": "Outfit_700Bold",
    "fontFamilyDisplayMedium": "Outfit_500Medium",
    "fontFamilyDisplaySemibold": "Outfit_600SemiBold",
    "fontFamilyMono": "Courier",
    "fontSize2XL": 28,
    "fontSize3XL": 48,
    "fontSizeLG": 18,
    "fontSizeMD": 16,
    "fontSizeSM": 14,
    "fontSizeXL": 20,
    "fontSizeXS": 13,
    "fontWeightBold": "700",
    "fontWeightLight": "300",
    "fontWeightMedium": "500",
    "fontWeightRegular": "400",
    "fontWeightSemibold": "600",
    "lineHeightNormal": 1.4,
    "lineHeightRelaxed": 1.6,
    "lineHeightTight": 1.1,
  },
}
`;
